@@ -6626,3 +6626,8 @@ PACKAGE: 2.2.99.2
     fixing #3203
  * Now checks for visibility all in Screen::Import, fixing #3207
 
+2008-01-16 tdb
+ * Overhauled Import plugins to use a Handler mechanism to output errors,
+    warnings and object parse/creation events (should be transparent to the
+	actual plugins), fixing #3206, #2812, #3205
+
